Update portfolio – added Telco Churn project card

--- a/index.html
+++ b/index.html
@@ -467,6 +467,27 @@
           <span class="pill">tidyverse · ggplot2</span>
         </footer>
       </article>
+
+      <!-- Telco Churn Python EDA -->
+      <article class="card card--half">
+        <div class="card-body">
+          <h3>📉 Telco Customer Churn Analysis (Python)</h3>
+          <p>
+            Performed end-to-end <strong>EDA on telecom customer data</strong> to understand
+            why users leave the service. Analyzed churn drivers such as contract type,
+            tenure, pricing bands, payment methods, and support features, and converted
+            the findings into <strong>business-focused retention strategies</strong>.
+          </p>
+        </div>
+        <footer>
+          <a class="btn" href="https://github.com/Mounika24-dotcom/Data-Analyst-Portfolio/tree/main/Telco_Churn_Python_Analysis" target="_blank" rel="noopener">
+            📁 View project on GitHub
+          </a>
+          <span class="pill">Python · Pandas · Seaborn</span>
+          <span class="pill">Churn & Retention Analysis</span>
+        </footer>
+      </article>
+      
     </section>
 
     <!-- CONTACT -->
