Update portfolio website and notebook

--- a/index.html
+++ b/index.html
@@ -488,6 +488,24 @@
         </footer>
       </article>
       
+      <!-- HR Analytics Dashboard (Tableau) -->
+      <article class="card" style="grid-column: span 12">
+        <img class="preview" src="HR_Analytics_Dashboard/dashboard.png" alt="HR Analytics Dashboard preview">
+          <div class="card-body">
+            <h3>👥 HR Employee Attrition Dashboard (Tableau)</h3>
+            <p>
+              Interactive Tableau dashboard analyzing employee attrition across gender, 
+              departments, job roles, and age groups. Includes KPIs, custom age buckets, 
+              attrition segmentation, and actionable insights for HR teams.
+            </p>
+          </div>
+          <footer>
+            <a class="btn" href="HR_Analytics_Dashboard/HR_Employee_Attrition.twbx" target="_blank">📊 Download Dashboard</a>
+            <a class="pill" href="HR_Analytics_Dashboard/README.md" target="_blank">Documentation</a>
+            <span class="pill">Tools: Tableau · CSV</span>
+          </footer>
+      </article>
+
     </section>
 
     <!-- CONTACT -->
